Amazon-EKS-Deployment/1_EKS_Deployment/EKS/7_App_Deployment/mssql/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mssql
  namespace: mssql
  annotations:
    kubernetes.io/ingress.class: nginx
    alb.ingress.kubernetes.io/scheme: internet-facing
    external-dns.alpha.kubernetes.io/hostname: mssql.solvweb.net
spec:
  ingressClassName: nginx
  rules:
    - host: mssql.solvweb.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mssql
              port:
                number: 1433
